@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-22T08:09:09Z",
-  "count_outdated" : 4788,
-  "uniques_outdated" : 1385,
+  "timestamp" : "2023-07-22T16:08:51Z",
+  "count_outdated" : 4789,
+  "uniques_outdated" : 1386,
   "count" : 4870,
   "uniques" : 1436,
   "clones" : [
-    {
-      "timestamp": "2023-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-09T00:00:00Z",
       "count": 3,
