@@ -1,12 +1,7 @@
 {
-  "count": 82,
+  "count": 81,
   "uniques": 35,
   "clones": [
-    {
-      "timestamp": "2023-07-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-09T00:00:00Z",
       "count": 3,
