@@ -1,3 +1,12 @@
+2023-07-22T16:08:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5631558854 # 1747
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
+* notice: last 14d: unq all: 35 81
+* notice: prev accum: outdated-unq outdated-all / unq all: 1385 4788 / 1436 4870
+* notice: next accum: outdated-unq outdated-all / unq all: 1386 4789 / 1436 4870
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-08] / []
+
 2023-07-22T08:09:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5629646092 # 1746
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
